--- a/exercises/manifest.json
+++ b/exercises/manifest.json
@@ -1,13 +1,23 @@
 {
   "version": 1,
-  "sequence": [
+  "catalog": [
     {
       "id": "transition-risk-assessment",
       "title": "Transition Risk Assessment",
-      "path": "/exercises/transition-risk-assessment.json",
-      "release": "immediate",
-      "locked": false
+      "type": "exercise",
+      "path": "tra.html",
+      "duration_minutes": 4,
+      "order": 10,
+      "visible": true
+    },
+    {
+      "id": "break-even-point",
+      "title": "Break-Even Point Visualization",
+      "type": "tool",
+      "path": "breakeven.html",
+      "duration_minutes": 5,
+      "order": 20,
+      "visible": true
     }
   ]
 }
-
